--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ function mergerbuilder(){
 
 ```
 #{code}#
-```</textarea>
+```
+</textarea>
 <br/>
 <button type="button" onclick="myFunction()">Submit</button>
 
