--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
     height: 500px;
     }
     </style>
+
+
+<body>
+
+<h2>Merger</h2>
+
+
+<p>Please enter your template, use #{fieldname}# as placeholders</p>
+
+<textarea id="template"># Title
+#{title}#
+
+## Description
+
+#{description}#
+## Code
+
+```
+#{code}#
+```</textarea>
+<br/>
+<button type="button" onclick="myFunction()">Submit</button>
+
+<p>Now we can replace those values</p>
+<div id="formarea">
+  <p id="inputbox"></p>
+  <button type="button" onclick="mergerbuilder()">Submit</button>
+
+</div>
+This gives
+<h2>Output</h2>
+<button type="button" onclick="download()">Download</button>
+<br/>
+<textarea id="mergeroutput"></textarea>
+<input type="file" id="myFile">
+<hr>
+<textarea style="width:500px;height: 400px" id="output"></textarea>
+
+</body>
 <script>
 const mergervars=[]
 function myFunction() {
@@ -41,41 +80,45 @@ function mergerbuilder(){
  }
  mergeroutput.innerHTML=template
 }
+
+var input = document.getElementById("myFile");
+var output = document.getElementById("output");
+
+
+input.addEventListener("change", function () {
+  if (this.files && this.files[0]) {
+    var myFile = this.files[0];
+    var reader = new FileReader();
+    
+    reader.addEventListener('load', function (e) {
+      output.textContent = e.target.result;
+    });
+    
+    reader.readAsBinaryString(myFile);
+  }   
+});
+function download() {
+    filename="output"
+    type="md"
+    console.log("filename="+filename)
+    data=document.getElementById("mergeroutput").value
+    var file = new Blob([data], {type: type});
+    if (window.navigator.msSaveOrOpenBlob) // IE10+
+        window.navigator.msSaveOrOpenBlob(file, filename);
+    else { // Others
+        var a = document.createElement("a"),
+                url = URL.createObjectURL(file);
+        a.href = url;
+        a.download = filename;
+        document.body.appendChild(a);
+        a.click();
+        setTimeout(function() {
+            document.body.removeChild(a);
+            window.URL.revokeObjectURL(url);  
+        }, 0); 
+    }
+}
+
 </script>
 
-
-<body>
-
-<h2>Merger</h2>
-
-
-<p>Please enter your template, use #{fieldname}# as placeholders</p>
-
-<textarea id="template"># Title
-#{title}#
-
-## Description
-
-#{description}#
-## Code
-
-```
-#{code}#
-```
-</textarea>
-<br/>
-<button type="button" onclick="myFunction()">Submit</button>
-
-<p>Now we can replace those values</p>
-<div id="formarea">
-  <p id="inputbox"></p>
-  <button type="button" onclick="mergerbuilder()">Submit</button>
-
-</div>
-This gives
-<h2>Output</h2>
-<textarea id="mergeroutput"></textarea>
-
-
-</body>
 </html> 
