--- a/merger.html
+++ b/merger.html
@@ -131,3 +131,13 @@
 }
   
   </script>
+<!-- Apologies, I don't want to do google analtics but Github.io doesn't let you see logs for non-repo traffic! -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2E723N9MD6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2E723N9MD6');
+</script>
