--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ This gives
 <textarea style="width:500px;height: 400px" id="output"></textarea>
 
 </body>
+</html>
 <script>
 const mergervars=[]
 function myFunction() {
@@ -120,5 +121,13 @@ function download() {
 }
 
 </script>
+<!-- Apologies, if github.io supported basic stats on non-repos I wouldn't use Google Analytics! -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQLQZPNNLE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-</html> 
+  gtag('config', 'G-QQLQZPNNLE');
+</script>
