--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h2>Merger</h2>
 
-
+<h3><a href="merger.html">Click here to allow CSV Uploads</a></h3>
 <p>Please enter your template, use #{fieldname}# as placeholders</p>
 
 <textarea id="template"># Title
