--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ function myFunction() {
   let uniquematches = []
   matches=Array.from(matches)
   matches.forEach((element) => {
-    if (!uniqueChars.includes(element)) {
-        uniqueChars.push(element);
+    if (!uniquematches.includes(element)) {
+        uniquematches.push(element);
     }
 });
   
