--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@ function myFunction() {
   uniquematch=[]
   for (const match of matches){
     currentmatch=match[1]
-      console.log("currentmatch="+currentmatch)
-   uniquematch+=match[1]
+   uniquematch+=currentmatch
       if (!uniquematch.includes(currentmatch)){
+          
+      console.log("currentmatch="+currentmatch)
    document.getElementById("inputbox").innerHTML += "<br/><label>"+currentmatch+"</label><br/><textarea id="+match[1]+"></textarea>"
    mergervars.push(match)
       }
