--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html>
  <head>
     <meta charset="utf-8">
@@ -22,7 +22,7 @@
 
 
 <body>
-
+<center>
 <h2>Merger</h2>
 
 <h3><a href="merger.html">Click here to allow CSV Uploads</a></h3>
@@ -53,6 +53,7 @@ This gives
 <button type="button" onclick="download()">Download</button>
 <br/>
 <textarea id="mergeroutput"></textarea>
+ </center>
 </body>
 </html>
 <script>
