--- a/merger.html
+++ b/merger.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Manual Merger</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
 
 <style>
     #template {
@@ -16,9 +21,8 @@
     </style>
 
 
-
 <body>
-
+<center>
 <h2>Merger</h2>
 <p>Drop a CSV in here - ensure the Markdown template uses the same field names</p>
 
@@ -140,4 +144,5 @@
   gtag('js', new Date());
 
   gtag('config', 'G-2E723N9MD6');
+</center>
 </script>
