--- a/merger.html
+++ b/merger.html
@@ -26,6 +26,7 @@
 
 <body>
 <h2>Merger</h2>
+ Like a mail merge for plain text files such as Markdown.
 <hr/>
 <p>1 - Please enter your template, use #{fieldname}# as placeholders</p>
 
