--- a/merger.html
+++ b/merger.html
@@ -25,7 +25,7 @@
 
 
 <body>
-<h2>Merger</h2>
+<h2>CSV Merger</h2>
  Like a mail merge for plain text files such as Markdown.
 <hr/>
 <p>1 - Please enter your template, use #{fieldname}# as placeholders</p>
