--- a/sans_careersgame.html
+++ b/sans_careersgame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Stop the attack!</title></head>
-<body background="/background.jpeg">
+<body background="background.jpeg">
 
    
 
