--- a/sans_careersgame.html
+++ b/sans_careersgame.html
@@ -49,7 +49,7 @@
         }
         </style>
 
-<div id="timer_div"><h1><p id="timer"> THE ATTACKERS WILL BE IN SOON!!! <br/><br/>Figure out the job roles and enter their codes to repel the attack!<br/><br/><p id="timer_p">You have <span id="countdowntimer">120 </span> Seconds</p></p></h1></div>
+<div id="timer_div"><h1><p id="timer"> THE ATTACKERS WILL BE IN SOON!!! <br/><br/><a target="_blank" href="Poster_Coolest-Careers_v0124_WEB.pdf">Figure out the job roles</a> and enter their codes to repel the attack!<br/><br/><p id="timer_p">You have <span id="countdowntimer">120 </span> Seconds</p></p></h1></div>
  <div id="mainbody"><h1>Enter the codes below:</h1>
     <br/>
 <h4>
