--- a/sans_careersgame.html
+++ b/sans_careersgame.html
@@ -127,7 +127,7 @@ var var_cracked=false;
 var downloadTimer = setInterval(function(){
     if(var_cracked==true){
             var seconds=document.getElementById("countdowntimer").innerHTML
-            document.getElementById("timer_div").innerHTML="<div id=\"winner\">YOU DID IT! WELL DONE! <br/><img id=\"day_saved\" src=\"daysaved.gif\"><br/> TIME REMAINING <br/>"+seconds+" seconds</div>"
+            document.getElementById("timer_div").innerHTML="<div id=\"winner\">YOU DID IT! WELL DONE! <br/><img id=\"day_saved\" src=\"day_saved.jpg\"><br/> TIME REMAINING <br/>"+seconds+" seconds</div>"
             document.getElementById("timer_p").innerHTML=""
         } 
        
