--- a/sans_careersgame.html
+++ b/sans_careersgame.html
@@ -97,7 +97,7 @@
 
  <div id="mainbody">
     
-    <h2>Find the job role codes based on the descriptions:</h2>    
+    <h2>Use the numbers in the top left of each role, and answer the below based on the descriptions:</h2>    
 <h4>
 <p class="question" id="clue_a"></p></h4>
 <input type="text" id="code_a" value="">
