--- a/DomainRegistrationSearch.html
+++ b/DomainRegistrationSearch.html
@@ -117,6 +117,9 @@ document.getElementById("youEntered").innerHTML="<h1>You Entered:</h1>"+domain;
 
 
 </script>
+<h1>Work in Progress - Domain Impersonation Search</h1>
+  <h2>Data uploaded: 2024-July-04</h2>
+  <h2>Data from: https://whoisds.com/newly-registered-domains</h2>
 <input type="text" id="domain">
 </input>
 
