--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li><a href="templater.html">Template Merger</li>
 <li><a href="merger.html">CSV Template Merger</li>
 <li><a href="DomainRegistrationSearch">Brand Impersonation Searcher</li>
-<li><a href="sans_careergame.html">SANS career game</li>
+<li><a href="sanscareergame.html">SANS career game</li>
 <li><a href="subnetter.html">IP Subnetter</li>
 </center>
 </body>
