--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 <center>
-<h2>Projects</h2>
+<h2>Useful Tools</h2>
 <li><a href="templater.html">Template Merger</li>
 <li><a href="merger.html">CSV Template Merger</li>
 <li><a href="DomainRegistrationSearch">Brand Impersonation Searcher</li>
