--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 <li><a href="DomainRegistrationSearch">Brand Impersonation Searcher</li>
 <li><a href="sanscareergame.html">SANS career game</li>
 <li><a href="subnetter.html">IP Subnetter</li>
+<li><a href="subnetter.html">Calendar with tags (created with Perlexity AI)</li>
 </center>
 </body>
