--- a/calendar.html
+++ b/calendar.html
@@ -147,6 +147,7 @@
 </head>
 <body>
     <h1>Week Calendar with Tags</h1>
+	<h2>Created by Martin Connarty with Perplexity.ai</h2>
     
     <input type="text" id="tagInput" placeholder="Enter tags (comma-separated)">
     <div id="tagContainer"></div>
