--- a/calendar.html
+++ b/calendar.html
@@ -109,6 +109,9 @@
         #clearSelection {
             background-color: #ff4d4d; /* Pinkish red */
         }
+        #clearAllTags {
+            background-color: #ff4d4d; /* Pinkish red */
+        }
         #importInput {
             display: none;
         }
