--- a/calendar.html
+++ b/calendar.html
@@ -110,6 +110,10 @@
         #clearSelection {
             background-color: #ff4d4d; /* Pinkish red */
         }
+
+	#clearAllTags {
+            background-color: #ff4d4d; /* Pinkish red */
+        }
         #importInput {
             display: none;
         }
