--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 <li><a href="sanscareergame.html">SANS career game</li>
 <li><a href="subnetter.html">IP Subnetter</li>
 <li><a href="calendar.html">Calendar with tags (created with Perlexity AI)</li>
+<li><a href="bsod.html">BSOD Game(created with Perlexity AI)</li>
 </center>
 </body>
