--- a/bsod.html
+++ b/bsod.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pill Clicker Game</title>
+    <title>Blue Screen of Attack attack</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> <!-- Importing a better font -->
     <style>
         body {
