--- a/bsod.html
+++ b/bsod.html
@@ -67,15 +67,15 @@
         }
         #computersFixed {
             position: absolute;
-            bottom: 60px;
-            left: 20px;
+            bottom: 60pt;
+            left: 20pt;
             font-size: 24px;
             color: black;
         }
         #madeBy {
             position: absolute;
-            bottom: 30px;
-            left: 20px;
+            bottom: 30pt;
+            left: 20pt;
             font-size: 24px;
             color: black;
         }
