--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <li><a href="DomainRegistrationSearch">Brand Impersonation Searcher</li>
 <li><a href="sanscareergame.html">SANS career game</li>
 <li><a href="subnetter.html">IP Subnetter</li>
-<li><a href="calendar.html">Calendar with tags (created with Perlexity AI)</li>
+<li><a href="calendar.html">Hourly Time Planner with tags (created with Perlexity AI)</li>
+<li><a href="monthlycalendar.html">Monthly Calendar with tags (created with Perlexity AI)</li>
 <li><a href="bsod.html">BSOD Game(created with Perlexity AI)</li>
 </center>
 </body>
