--- a/bsod.html
+++ b/bsod.html
@@ -47,7 +47,7 @@
             text-align: center; /* Center text in pills */
         }
         .overlay-text {
-            font-size: 300px; /* Huge text for the sad face */
+            font-size: 8vw; /* Huge text for the sad face */
             margin: 0;
         }
         .overlay-subtext {
