--- a/bsod.html
+++ b/bsod.html
@@ -71,15 +71,15 @@
         }
         #computersFixed {
             position: absolute;
-            bottom: 60px;
-            left: 20px;
+            bottom: 20%;
+            left: 2%;
             font-size: 24px;
             color: black;
         }
         #madeBy {
             position: absolute;
-            bottom: 20px;
-            left: 20px;
+            bottom: 5%;
+            left: 2%;
             font-size: 24px;
             color: black;
         }
