--- a/bsod.html
+++ b/bsod.html
@@ -41,7 +41,7 @@
             padding: 15px; /* Increased padding for easier tapping */
             border-radius: 5px;
             cursor: pointer;
-            font-size: 20px;
+            font-size: 2vw;
             transition: transform 0.2s;
             min-width: 120px; /* Minimum width for pills */
             text-align: center; /* Center text in pills */
@@ -51,7 +51,7 @@
             margin: 0;
         }
         .overlay-subtext {
-            font-size: 96px; /* Tripled size for the message */
+            font-size: 8vw; /* Tripled size for the message */
             margin-top: 20px;
         }
         .restart-popup {
@@ -78,7 +78,7 @@
         }
         #madeBy {
             position: absolute;
-            bottom: 5%;
+            bottom: 10%;
             left: 2%;
             font-size: 24px;
             color: black;
