--- a/bsod.html
+++ b/bsod.html
@@ -73,14 +73,14 @@
             position: absolute;
             bottom: 20%;
             left: 2%;
-            font-size: 24px;
+            font-size: 3vw;
             color: black;
         }
         #madeBy {
             position: absolute;
             bottom: 10%;
             left: 2%;
-            font-size: 24px;
+            font-size: 2vw;
             color: black;
         }
     </style>
