--- a/bsod.html
+++ b/bsod.html
@@ -51,8 +51,8 @@
             margin: 0;
         }
         .overlay-subtext {
-            font-size: 8vw; /* Tripled size for the message */
-            margin-top: 20px;
+            font-size: 3vw; /* Tripled size for the message */
+            margin-top: 40%;
         }
         .restart-popup {
             position: absolute;
