--- a/bsod.html
+++ b/bsod.html
@@ -48,7 +48,7 @@
         }
         .overlay-text {
             font-size: 8vw; /* Huge text for the sad face */
-            margin: 0;
+            margin-top: 20%;
         }
         .overlay-subtext {
             font-size: 3vw; /* Tripled size for the message */
