--- a/bsod.html
+++ b/bsod.html
@@ -66,7 +66,7 @@
             border-radius: 10px;
             text-align: center;
             display: none; /* Hidden initially */
-            font-size: 24px;
+            font-size: 4vw;
             max-width: 90%; /* Responsive width */
         }
         #computersFixed {
