--- a/bsod.html
+++ b/bsod.html
@@ -61,13 +61,14 @@
             transform: translate(-50%, -50%);
             background-color: white;
             color: black;
-            padding: 20px;
-            border: 2px solid blue;
-            border-radius: 10px;
+            padding: 20pt;
+            border: 2pt solid blue;
+            border-radius: 10pt;
             text-align: center;
             display: none; /* Hidden initially */
             font-size: 4vw;
-            max-width: 90%; /* Responsive width */
+            max-width: 80%; /* Responsive width */
+            z-index: 7;
         }
         #computersFixed {
             position: absolute;
