--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <li><a href="calendar.html">Hourly Time Planner with tags (created with Perlexity AI)</li>
 <li><a href="MonthlyCalendar.html">Monthly Calendar with tags (created with Perlexity AI)</li>
  <li><a href="timeliner.html">Timeline creation tool</li>
+<li><a href="annotator.html">HTML Annotation Tool (Created with Perplexity AI)</a>/li>
 <li><a href="bsod.html">BSOD Game(created with Perlexity AI)</li>
 </center>
 </body>
