--- a/timeliner.html
+++ b/timeliner.html
@@ -76,7 +76,7 @@
         <h2>Add Event</h2>
         <input type="text" id="eventTitle" placeholder="Event Title" required>
         <div class="date-input-container">
-		<h3>Manually add time (remember use UTC)</h3>
+		<h3>Manually add time (remember use UTC)</h3><br/>
             <input type="datetime-local" id="eventDate" required>
             <input type="checkbox" id="useNowCheckbox">
             <label for="useNowCheckbox">Use current time (UTC)</label>
