--- a/timeliner.html
+++ b/timeliner.html
@@ -75,11 +75,13 @@
     <form id="eventForm">
         <h2>Add Event</h2>
         <input type="text" id="eventTitle" placeholder="Event Title" required>
+	<h3>Manually add time (remember use UTC)</h3><br/>
         <div class="date-input-container">
-		<h3>Manually add time (remember use UTC)</h3><br/>
+		
             <input type="datetime-local" id="eventDate" required>
             <input type="checkbox" id="useNowCheckbox">
-            <label for="useNowCheckbox">Use current time (UTC)</label>
+	<h3>Use current time (UTC)</h3>
+            <label for="useNowCheckbox"></label>
         </div>
         <input type="text" id="author" placeholder="Author" required>
         <textarea id="eventDetails" placeholder="Event Details" rows="4" required></textarea>
