--- a/timeliner.html
+++ b/timeliner.html
@@ -80,6 +80,8 @@
 		
             <input type="datetime-local" id="eventDate" required>
             <input type="checkbox" id="useNowCheckbox">
+	</div>
+	<div class="date-input-container">
 	<h3>Use current time (UTC)</h3>
             <label for="useNowCheckbox"></label>
         </div>
