--- a/timeliner.html
+++ b/timeliner.html
@@ -81,8 +81,9 @@
             <input type="datetime-local" id="eventDate" required>
             <input type="checkbox" id="useNowCheckbox">
 	</div>
+	<h3>OR... Use current time (UTC)</h3>
 	<div class="date-input-container">
-	<h3>Use current time (UTC)</h3>
+	
             <label for="useNowCheckbox"></label>
         </div>
         <input type="text" id="author" placeholder="Author" required>
