--- a/timeliner.html
+++ b/timeliner.html
@@ -55,6 +55,8 @@
         #useNowCheckbox {
             margin-left: 10px;
             margin-right: 5px;
+	    height: 25px;
+ 	    width: 25px;
         }
         .delete-btn {
             position: absolute;
